<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/status_bar"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:alpha="0.95"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <View
        android:id="@+id/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:elevation="-1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:autofillHints="sip_name"
        android:id="@+id/sip_username"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/hint_sip_user"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_sip_username" />

    <TextView
        android:id="@+id/label_sip_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:paddingTop="16dp"
        android:text="@string/sip_server"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sip_password" />

    <EditText
        android:autofillHints="sip address"
        android:id="@+id/sip_server"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/hint_sip_addr"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_sip_server" />

    <EditText
        android:autofillHints="sip_password"
        android:id="@+id/sip_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_sip_pass"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_sip_password" />


    <TextView
        android:id="@+id/label_sip_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:text="@string/sip_pass"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sip_username" />

    <TextView
        android:id="@+id/label_sip_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:text="@string/sip_user"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_settings_button"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/save_setting"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sip_server"
        app:layout_constraintVertical_bias="0.863" />

    <ImageView
        android:contentDescription="@string/nav_arrow"
        android:id="@+id/nav_arrow"
        android:layout_width="38dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow_icon" />

    <ImageView
        android:contentDescription="@string/log"
        android:id="@+id/log_icon"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:layout_marginStart="368dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log" />


</androidx.constraintlayout.widget.ConstraintLayout>
