<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/status_bar"
        android:layout_width="412dp"
        android:layout_height="55dp"
        android:alpha="0.95"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status_Bar"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/circularButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginStart="124dp"
        android:layout_marginTop="136dp"
        android:text="@string/power_button"
        android:textColor="#000"
        app:srcCompat="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sever_selector4"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="672dp"
        android:background="@drawable/sever_selector"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Us_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="424dp"
        android:elevation="10dp"
        android:text="@string/server_name_us"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sever_selector2"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/toolbar_border"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sever_selector1"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/toolbar_border"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RU_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="512dp"
        android:elevation="10dp"
        android:text="@string/server_name_ru"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/flag"
        android:id="@+id/Thailand_flag2"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="756dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/th_flag"
        android:elevation="10dp" />

    <ImageView
        android:contentDescription="@string/flag"
        android:id="@+id/russia_flag"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ru_flag" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sever_selector3"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="588dp"
        android:background="@drawable/toolbar_border"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TH1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="684dp"
        android:elevation="10dp"
        android:text="@string/server_name_th1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sever_selector5"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="756dp"
        android:background="@drawable/toolbar_border"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selected_sever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="324dp"
        android:text="@string/server_selector"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TH2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="764dp"
        android:elevation="10dp"
        android:text="@string/server_name_th2"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Cn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="600dp"
        android:elevation="10dp"
        android:text="@string/server_name_su"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/flag"
        android:id="@+id/Thailand_flag1"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="672dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/th_flag" />

    <ImageView
        android:contentDescription="@string/flag"
        android:id="@+id/us_flag"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="412dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/us_flag" />

    <ImageView
        android:contentDescription="@string/flag"
        android:id="@+id/China_flag"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="588dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/su_flag" />

    <ImageView
        android:id="@+id/open_settings_button"
        android:contentDescription="@string/menu"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
